# vscode-to-vs

./: Cargo.toml  README.md  install.sh  test.sh
assets/: sln  vcxproj  vcxproj.filters
src/: code_file.rs  guid.rs  main.rs
