[package]
name = "vscode-to-vs"
version = "1.0.2"
edition = "2021"
include = ["/assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
random-string = "1.0.0"
aho-corasick = "0.7.20"
anyhow = "1"